@@ -1,12 +1,11 @@
 package net.p3pp3rf1y.sophisticatedbackpacks.init;
 
-import com.google.common.collect.ImmutableList;
-import net.minecraft.loot.LootEntry;
-import net.minecraft.loot.LootFunctionType;
-import net.minecraft.loot.LootPool;
-import net.minecraft.loot.TableLootEntry;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.registry.Registry;
+import net.minecraft.core.Registry;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.storage.loot.LootPool;
+import net.minecraft.world.level.storage.loot.entries.LootPoolEntryContainer;
+import net.minecraft.world.level.storage.loot.entries.LootTableReference;
+import net.minecraft.world.level.storage.loot.functions.LootItemFunctionType;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.LootTableLoadEvent;
 import net.p3pp3rf1y.sophisticatedbackpacks.Config;
@@ -18,8 +17,8 @@ import java.util.List;
 public class ModLoot {
 	private ModLoot() {}
 
-	public static final LootFunctionType COPY_BACKPACK_DATA = new LootFunctionType(new CopyBackpackDataFunction.Serializer());
-	private static final List<String> CHEST_TABLES = ImmutableList.of("abandoned_mineshaft", "bastion_treasure", "desert_pyramid", "end_city_treasure", "nether_bridge", "shipwreck_treasure", "simple_dungeon", "woodland_mansion");
+	public static final LootItemFunctionType COPY_BACKPACK_DATA = new LootItemFunctionType(new CopyBackpackDataFunction.Serializer());
+	private static final List<String> CHEST_TABLES = List.of("abandoned_mineshaft", "bastion_treasure", "desert_pyramid", "end_city_treasure", "nether_bridge", "shipwreck_treasure", "simple_dungeon", "woodland_mansion");
 
 	public static void init() {
 		Registry.register(Registry.LOOT_FUNCTION_TYPE, new ResourceLocation(SophisticatedBackpacks.MOD_ID, "copy_backpack_data"), COPY_BACKPACK_DATA);
@@ -44,7 +43,7 @@ public class ModLoot {
 		return LootPool.lootPool().add(getInjectEntry(entryName)).bonusRolls(0, 1).name("sophisticatedbackpacks_inject_pool").build();
 	}
 
-	private static LootEntry.Builder<?> getInjectEntry(String name) {
-		return TableLootEntry.lootTableReference(new ResourceLocation(SophisticatedBackpacks.MOD_ID, "inject/" + name)).setWeight(1);
+	private static LootPoolEntryContainer.Builder<?> getInjectEntry(String name) {
+		return LootTableReference.lootTableReference(new ResourceLocation(SophisticatedBackpacks.MOD_ID, "inject/" + name)).setWeight(1);
 	}
 }
